<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <WebView
        android:id="@+id/web_view"
        android:layout_above="@+id/ll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
    
    <LinearLayout
        android:id="@id/ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
    	<ImageButton 
    	    android:id="@+id/browser_back"
    	    android:contentDescription="@string/back"
    	    android:layout_height="wrap_content"
    	    android:layout_width="0dp"
    	    android:layout_weight="2"
    	    android:src="@android:drawable/ic_media_rew"/>
    	<ImageButton 
    	    android:id="@+id/browser_forward"
    	    android:contentDescription="@string/forward"
    	    android:layout_height="wrap_content"
    	    android:layout_width="0dp"
    	    android:layout_weight="2"
    	    android:src="@android:drawable/ic_media_ff"/>

    	<ImageButton
    	    android:id="@+id/browser_refresh"
    	    android:contentDescription="@string/refresh"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:src="@android:drawable/ic_menu_rotate" />
        
    </LinearLayout>
    

</RelativeLayout>